--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,15 @@
+length_on: 8.5 #Length of lasers when on.
+length_max: 11.0
 
-length_on: 10 #Length of lasers when on.
+#TopDownCircle: [[-612.5, 78.0, 352.5, 4.0],[-599.5, 78.0, 352.5, 4.0]]
+#TopDownDoubleCircle: [[-599.5, 78.0, 338.5, 4.0],[-612.5, 78.0, 338.5, 4.0],[-599.5, 78.0, 366.5, 4.0],[-612.5, 78.0, 366.5, 4.0]]
 
-TopDownCircle: [-611, 78, 466]
+TopDownCircle: [[-612.5, 78.0, 338.5, 4.0],[-599.5, 78.0, 352.5, 4.0],[-612.5, 78.0, 366.5, 4.0],[-606.0, 78.0, 338.5, 4.0],[-606.0, 78.0, 366.5, 4.0]]
+TopDownDoubleCircle: [[-599.5, 78.0, 338.5, 4.0],[-612.5, 78.0, 352.5, 4.0],[-599.5, 78.0, 366.5, 4.0],[-606.0 78.0, 352.5, 4.0]]
+
+# Center: [-606.0, 78.0, 338.5, 4.0],[-606.0 78.0, 352.5, 4.0],[-606.0, 78.0, 366.5, 4.0]
+
+TopDownLineCircle: [[-606.0,78.0,345.5, 6.0],[-606.0, 78.0, 359.5, 6.0]]
+DownTopCircle: [[-610.5, 71.0, 333.5, 4.0],[-601.5, 71.0, 333.5, 4.0]]
+
+FacingTowards: SOUTH
