--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,15 +1,11 @@
 length_on: 8.5 #Length of lasers when on.
 length_max: 11.0
 
-#TopDownCircle: [[-612.5, 78.0, 352.5, 4.0],[-599.5, 78.0, 352.5, 4.0]]
-#TopDownDoubleCircle: [[-599.5, 78.0, 338.5, 4.0],[-612.5, 78.0, 338.5, 4.0],[-599.5, 78.0, 366.5, 4.0],[-612.5, 78.0, 366.5, 4.0]]
-
-TopDownCircle: [[-612.5, 78.0, 338.5, 4.0],[-599.5, 78.0, 352.5, 4.0],[-612.5, 78.0, 366.5, 4.0],[-606.0, 78.0, 338.5, 4.0],[-606.0, 78.0, 366.5, 4.0]]
-TopDownDoubleCircle: [[-599.5, 78.0, 338.5, 4.0],[-612.5, 78.0, 352.5, 4.0],[-599.5, 78.0, 366.5, 4.0],[-606.0 78.0, 352.5, 4.0]]
-
-# Center: [-606.0, 78.0, 338.5, 4.0],[-606.0 78.0, 352.5, 4.0],[-606.0, 78.0, 366.5, 4.0]
-
+#format: [x,y,z,number of lasers]
+TopDownCircle: [[-612.5, 78.0, 338.5, 4.0],[-599.5, 78.0, 352.5, 4.0],[-612.5, 78.0, 366.5, 4.0],[-606.0, 78.0, 341.5, 4.0],[-606.0, 78.0, 362.5, 4.0]]
+TopDownDoubleCircle: [[-599.5, 78.0, 338.5, 4.0],[-612.5, 78.0, 352.5, 4.0],[-599.5, 78.0, 366.5, 4.0],[-606.0, 78.0, 352.5, 4.0]]
 TopDownLineCircle: [[-606.0,78.0,345.5, 6.0],[-606.0, 78.0, 359.5, 6.0]]
 DownTopCircle: [[-610.5, 71.0, 333.5, 4.0],[-601.5, 71.0, 333.5, 4.0]]
+FrontFacerCircle: [[-596.5, 72.5, 329.5, 3.0],[-615.5, 72.5, 329.5, 3.0]]
 
-FacingTowards: SOUTH
+FacingTowards: SOUTH # MUST BE ALL UPPER-CASE: NORTH,SOUTH,EAST,WEST are all valid.
