--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,5 +11,6 @@ FrontFacerCircle: [[-596.5, 72.5, 329.5, 3.0],[-615.5, 72.5, 329.5, 3.0]]
 Rings: [-605.5,73.0,369.5]
 RingCount: 8
 RingSize: 10
+RingSeperation: 3.5
 
 FacingTowards: SOUTH # MUST BE ALL UPPER-CASE: NORTH,SOUTH,EAST,WEST are all valid.
