--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,23 +1,6 @@
-name: Nightclub
-version: ${project.version}
+name: Nightclub2.0
+version: '${project.version}'
 main: com.ilm9001.nightclub.Nightclub
 api-version: 1.17
-description: Nightclub plugin based on beatmaps for beat saber.
-depend: []
-
-commands:
-  playbp:
-    description: Load a beatmap and play it
-    usage: /playbp <Beatmap Folder name>
-    permission: nightclub.playbp
-  test:
-    description: testing
-    usage: /test
-    permission: nightclub.test
-
-permissions:
-  nightclub.playbp:
-    description: plays a beatmap
-    default: op
-  nightclub.test:
-    default: op
+authors: [ ilm9001 ]
+description: Nightclub 2.0
