--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
                     <relocations>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>com.ilm9001.acf</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>com.ilm9001.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.locales</pattern>
-                            <shadedPattern>com.ilm9001.locales</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>com.ilm9001.locales</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.bstats</pattern>
