--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ main: com.ilm9001.nightclub.Nightclub
 api-version: 1.17
 authors: [ ilm9001 ]
 description: Nightclub 2.0
+depend: [ ProtocolLib ]
 
 commands:
   light:
