--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Nightclub2.0
 version: '${project.version}'
 main: com.ilm9001.nightclub.Nightclub
 api-version: 1.18
-authors: [ ilm9001 ]
+authors: [ hydrogen ]
 description: Nightclub 2.0
 depend: [ ProtocolLib ]
 
