--- a/Minestom/pom.xml
+++ b/Minestom/pom.xml
@@ -134,9 +134,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.github.Archy-X</groupId>
+            <groupId>co.aikar</groupId>
             <artifactId>acf-minestom</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
+            <version>0.6.0-SNAPSHOT</version> <!-- https://github.com/Moulberry/acf-minestom in local maven -->
             <scope>compile</scope>
         </dependency>
         <dependency>
