--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -45,10 +45,6 @@
                     </dependencyReducedPomLocation>
                     <relocations>
                         <relocation>
-                            <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>exposed.hydrogen.acf</shadedPattern>
-                        </relocation>
-                        <relocation>
                             <pattern>co.aikar.locales</pattern>
                             <shadedPattern>exposed.hydrogen.locales</shadedPattern>
                         </relocation>
@@ -118,7 +114,7 @@
         </dependency>
         <dependency>
             <groupId>co.aikar</groupId>
-            <artifactId>acf-paper</artifactId>
+            <artifactId>acf-core</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
