--- a/Minestom/pom.xml
+++ b/Minestom/pom.xml
@@ -49,10 +49,6 @@
                             <shadedPattern>exposed.hydrogen.acf</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>co.aikar.locales</pattern>
-                            <shadedPattern>exposed.hydrogen.locales</shadedPattern>
-                        </relocation>
-                        <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>exposed.hydrogen.bstats</shadedPattern>
                         </relocation>
@@ -71,12 +67,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>../core/src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
     </build>
 
     <pluginRepositories>
@@ -136,8 +126,7 @@
         <dependency>
             <groupId>co.aikar</groupId>
             <artifactId>acf-minestom</artifactId>
-            <version>0.6.0-SNAPSHOT</version> <!-- https://github.com/Moulberry/acf-minestom in local maven -->
-            <scope>compile</scope>
+            <version>0.6.0</version> <!-- https://github.com/Moulberry/acf-minestom in local maven -->
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
