--- a/Minestom/pom.xml
+++ b/Minestom/pom.xml
@@ -50,11 +50,17 @@
             <groupId>dev.hypera.chameleon</groupId>
             <artifactId>platform-minestom</artifactId>
             <version>0.4.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
         </dependency>
         <dependency>
             <groupId>com.github.Minestom</groupId>
             <artifactId>Minestom</artifactId>
-            <version>-SNAPSHOT</version>
+            <version>7867313290</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
