--- a/Minestom/pom.xml
+++ b/Minestom/pom.xml
@@ -56,6 +56,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.Minestom</groupId>
