--- a/Assemble/pom.xml
+++ b/Assemble/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>exposed.hydrogen.nightclub</groupId>
         <artifactId>Nightclub</artifactId>
-        <version>${revision}</version>
+        <version>2.4</version>
     </parent>
 
     <artifactId>Nightclub-all</artifactId>
@@ -67,19 +67,19 @@
         <dependency>
             <groupId>exposed.hydrogen.nightclub</groupId>
             <artifactId>Core</artifactId>
-            <version>${revision}</version>
+            <version>2.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>exposed.hydrogen.nightclub</groupId>
             <artifactId>Spigot</artifactId>
-            <version>${revision}</version>
+            <version>2.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>exposed.hydrogen.nightclub</groupId>
             <artifactId>Minestom</artifactId>
-            <version>${revision}</version>
+            <version>2.4</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
