--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>Nightclub</artifactId>
         <groupId>exposed.hydrogen.nightclub</groupId>
-        <version>${revision}</version>
+        <version>2.4</version>
     </parent>
 
     <artifactId>Core</artifactId>
@@ -31,6 +31,10 @@
         <repository>
             <id>hypera-snapshots</id>
             <url>https://repo.hypera.dev/snapshots/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
