--- a/Minestom/pom.xml
+++ b/Minestom/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>Nightclub</artifactId>
         <groupId>exposed.hydrogen.nightclub</groupId>
-        <version>${revision}</version>
+        <version>2.4</version>
     </parent>
 
     <artifactId>Minestom</artifactId>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>exposed.hydrogen.nightclub</groupId>
             <artifactId>Core</artifactId>
-            <version>${revision}</version>
+            <version>2.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -70,9 +70,10 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>co.aikar</groupId>
+            <groupId>com.github.AlexDicy</groupId>
             <artifactId>acf-minestom</artifactId>
-            <version>0.6.0</version> <!-- https://github.com/Moulberry/acf-minestom in local maven -->
+            <version>v1.5-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
