--- a/Spigot/pom.xml
+++ b/Spigot/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>Nightclub</artifactId>
         <groupId>exposed.hydrogen.nightclub</groupId>
-        <version>${revision}</version>
+        <version>2.4</version>
     </parent>
 
     <artifactId>Spigot</artifactId>
@@ -32,13 +32,17 @@
             <id>hypera-snapshots</id>
             <url>https://repo.hypera.dev/snapshots/</url>
         </repository>
+        <repository>
+            <id>aikar</id>
+            <url>https://repo.aikar.co/content/groups/aikar/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>exposed.hydrogen.nightclub</groupId>
             <artifactId>Core</artifactId>
-            <version>${revision}</version>
+            <version>2.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
