--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>exposed.hydrogen.nightclub</groupId>
     <artifactId>Nightclub</artifactId>
     <packaging>pom</packaging>
-    <version>${revision}</version>
+    <version>2.4</version>
 
     <modules>
         <module>Core</module>
@@ -20,7 +20,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <java.version>17</java.version>
-        <revision>2.3.1</revision>
     </properties>
 
     <dependencies>
@@ -37,4 +36,10 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
